attempted fix on mobile autoplay

--- a/staticfiles/myoldEP/css/myoldEP.css
+++ b/staticfiles/myoldEP/css/myoldEP.css
@@ -174,6 +174,7 @@ body {
 
 .scroll-wrap
 {
+  margin-top: 0;
 	position: fixed;
 	width: 99%;
 	height: 50em;
